--- a/code/index.html
+++ b/code/index.html
@@ -7,7 +7,7 @@
       <!-- Mobile Metas -->
       <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <!-- Site Metas -->
-      <title>Digital Marketing - Responsive HTML5 Template</title>
+      <title>BurāQ Tech- Faster than Light</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -43,7 +43,7 @@
             <ul>
                <li><a href="index.html">Home</a></li>
                <li><a href="about.html">About</a></li>
-               <li><a href="services.html">Services</a></li>
+               <li><a href="services.html">Products</a></li>
                <li><a href="contact.html">Contact us</a></li>
             </ul>
          </div>
@@ -75,9 +75,9 @@
                            <div class="row">
                               <div class="col-md-12">
                                  <div class="slide_text">
-                                    <h6>Grow your business</h6>
-                                    <h3>Digital</h3>
-                                    <h4>Marketing</h4>
+                                    <h6>Live Smart</h6>
+                                    <h3>Live</h3>
+                                    <h4>Easy</h4>
                                     <br>
                                     <a class="readmore_bt" href="about.html">Read More</a>
                                  </div>
@@ -90,9 +90,9 @@
                            <div class="row">
                               <div class="col-md-12">
                                  <div class="slide_text">
-                                    <h6>Grow your business</h6>
-                                    <h3>Digital</h3>
-                                    <h4>Marketing</h4>
+                                    <h6>Live Smart</h6>
+                                    <h3>Live</h3>
+                                    <h4>Easy</h4>
                                     <br>
                                     <a class="readmore_bt" href="about.html">Read More</a>
                                  </div>
@@ -105,9 +105,9 @@
                            <div class="row">
                               <div class="col-md-12">
                                  <div class="slide_text">
-                                    <h6>Grow your business</h6>
-                                    <h3>Digital</h3>
-                                    <h4>Marketing</h4>
+                                    <h6>Live Smart</h6>
+                                    <h3>Live</h3>
+                                    <h4>Easy</h4>
                                     <br>
                                     <a class="readmore_bt" href="about.html">Read More</a>
                                  </div>
@@ -128,7 +128,7 @@
                   <div class="col-md-12">
                      <div class="full">
                         <div class="heading_main text_align_center">
-                           <h2>What We Do</h2>
+                           <h2>What We Make</h2>
                         </div>
                      </div>
                   </div>
@@ -141,10 +141,10 @@
                             <img class="default-none" src="images/icon_1w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>Link Building</h4>
+                            <h4>Automatic Sanitizer Dispenser</h4>
                          </div>
                          <div class="full">
-                           <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                           <p>Battery powered and long lasting</p>
                          </div>
                      </div>
                   </div>
@@ -155,10 +155,10 @@
                             <img class="default-none" src="images/icon_2w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>Monthly SEO Task</h4>
+                            <h4>Smart Moina Maker</h4>
                          </div>
                          <div class="full">
-                           <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                           <p>Make moina for your fish without headache. Plug it and forget.</p>
                          </div>
                      </div>
                   </div>
@@ -169,10 +169,10 @@
                             <img class="default-none" src="images/icon_3w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>On Page SEO</h4>
+                            <h4>Smart Star</h4>
                          </div>
                          <div class="full">
-                           <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                           <p>RGB lamps with realtime music recognition.</p>
                          </div>
                      </div>
                   </div>
@@ -183,10 +183,10 @@
                             <img class="default-none" src="images/icon_4w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>Online marketing</h4>
+                            <h4>LCD/oLED touch</h4>
                          </div>
                          <div class="full">
-                           <p>It is a long established fact that a reader will be distracted by the readable content..</p>
+                           <p>Bring your projects to life with our smart touch displays</p>
                          </div>
                      </div>
                   </div>
