--- a/code/index.html
+++ b/code/index.html
@@ -128,40 +128,41 @@
                   <div class="col-md-12">
                      <div class="full">
                         <div class="heading_main text_align_center">
-                           <h2>What We Make</h2>
+                           <h2>Our Services</h2>
                         </div>
                      </div>
                   </div>
                </div>
                <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                      <div class="full feature_box">
                          <div class="full icon">
                             <img class="default-block" src="images/icon_1.png" alt="#" />
                             <img class="default-none" src="images/icon_1w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>Automatic Sanitizer Dispenser</h4>
+                            <h4>Security and Surveillance</h4>
                          </div>
                          <div class="full">
-                           <p>Battery powered and long lasting</p>
+                           <p>Electronic security leverages technology in safeguarding assets by preventing unauthorized access to people and property. We offers security and surveillance solutions integrating a whole range of security devices such as Close Circuit Televisions (CCTVs), and other security gadgets that detect and deter security threats from thieves, militants and extremists. The Security Systems Group (SSG) of BitNut Technologies is fully geared to address the present needs of the security systems market as well meet the requirement by Government and Paramilitary bodies for security systems and solutions. The integrated security solutions incorporate the most advanced image processing technologies  to deliver the performance functionalities and reliability that the customer can count on.</p>
                          </div>
                      </div>
                   </div>
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                      <div class="full feature_box">
                          <div class="full icon">
                             <img class="default-block" src="images/icon_2.png" alt="#" />
                             <img class="default-none" src="images/icon_2w.png" alt="#" />
                          </div>
                          <div class="full">
-                            <h4>Smart Moina Maker</h4>
+                            <h4>Home Automation</h4>
                          </div>
                          <div class="full">
-                           <p>Make moina for your fish without headache. Plug it and forget.</p>
+                           <p>Whether you’re home or away, we make smart simple. With an BitNut Smart Home Security System and the BitNut mobile app, you have remote access and control of everything from lights, locks, and thermostats, to your garage door, cameras, and, of course, your security system.</p>
                          </div>
                      </div>
                   </div>
+                  <!--
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                      <div class="full feature_box">
                          <div class="full icon">
@@ -176,6 +177,8 @@
                          </div>
                      </div>
                   </div>
+                  -->
+                  <!--
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                      <div class="full feature_box">
                          <div class="full icon">
@@ -190,6 +193,7 @@
                          </div>
                      </div>
                   </div>
+                  -->
                </div>
             </div>
          </div>
